--- a/EliteScheduleApp_01/www/app/layout/menu-layout.html
+++ b/EliteScheduleApp_01/www/app/layout/menu-layout.html
@@ -2,19 +2,38 @@
 
     <ion-pane ion-side-menu-content>
          <ion-nav-bar class="bar-positive">
+             <ion-nav-back-button class="button-clear button-icon icon ion-ios7-arrow-back"></ion-nav-back-button>
           <ion-nav-title>home</ion-nav-title>
              <ion-nav-buttons side="left">
             <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
          </ion-nav-buttons>
         </ion-nav-bar>
       
-      
+        <<ion-nav-view  name="mainContent" animation="slide-left-right "></ion-nav-view> 
      
     </ion-pane>
 
     <ion-side-menu side="left">
+        <header class="bar bar-header bar-positive">
+            
+            <h1 class="title">side menu</h1>
+        </header>
         
+        <ion-content  class="has-header" >
+            
+            <ion-list>
+                
+                <ion-item nav-clear menu-close ui-sref="home.leagues">Home</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.teams">Teams</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.standings">Standalone</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.locations">Locations</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.rules">Rules</ion-item>
+         
+            </ion-list>
+            
+        </ion-content>  
         
+       
 
     </ion-side-menu>
 
